.provarCaches/00D5f000005vwGkEAI/objects/rstk__fsoinvdtl__c.object
<CustomObject>
    <description>fsoinvdtl__c</description>
    <fields>
        <fullName>rstk__fsoinvdtl_comment__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__fsoinvdtl_fsoinvline__c</fullName>
        <label>Print Invoice Line</label>
        <referenceTo>rstk__FSOINVLINE__c</referenceTo>
        <relationshipName>fsoinvdtls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__fsoinvdtl_price__c</fullName>
        <label>Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoinvdtl_qty__c</fullName>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoinvdtl_seq__c</fullName>
        <label>Print Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoinvdtl_text__c</fullName>
        <label>Print Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Print Invoice Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Print Invoice Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>